--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SatisfyingToDoList</string>
+    <string name="app_name">Satisfying To-Do List</string>
     <string name="tab_text_1">Today</string>
     <string name="tab_text_2">Tomorrow</string>
 </resources>
